# 2025-10-Zukunftstag-simulation

./: .gitignore  2025-10-Zukunftstag-simulation.ipynb  README.md  app.py  config.py  database.py  deployment_guide.md  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
data/: animals.txt  eltern_vornamen.txt  kinder_vornamen.txt  team_namen.txt
modules/admin/: admin_dashboard.py  admin_game1.py  admin_game2.py  admin_game3.py  admin_game4.py  admin_helpers.py
modules/user/: feedback.py  game1_heights.py  game2_perimeter.py  game3_memory.py  game4_clinical.py  tech_check.py
scripts/: check_session.py  debug_game3.py  generate_qr_codes.py  generate_test_data.py  initialize_sessions.py
utils/: helpers.py  visualizations.py
