[tool.poetry]
name = "2025-10-zukunftstag-simulation"
version = "0.1.0"
description = ""
authors = ["Jitao David Zhang <davidvonpku@gmail.com>"]
license = "GPL-3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.3"
itables = "^2.5.2"
numpy = "^2.3.4"
matplotlib = "^3.10.7"
ipykernel = "^7.0.1"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
