[tool.poetry]
name = "2025-10-zukunftstag-simulation"
version = "0.1.0"
description = ""
authors = ["Jitao David Zhang <davidvonpku@gmail.com>"]
license = "GPL-3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.3"
itables = "^2.5.2"
numpy = "^2.3.4"
matplotlib = "^3.10.7"
ipykernel = "^7.0.1"
jupyter = "^1.1.1"
seaborn = "^0.13.2"
mplcursors = "^0.7"
pyqt5 = "^5.15.11"
ipympl = "^0.9.8"
jupyterlab = "^4.4.10"
nbclassic = "^1.3.3"
ipywidgets = "^8.1.7"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
jupyterlab = "^4.4.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
